--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
+    <nav>
+     <div class="nav-wrapper">
+       <a href="#" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt="" /></a>
+     </div>
+   </nav>
     {{{body}}}
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
