render book data to view

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
   <body>
     <nav>
      <div class="nav-wrapper">
-       <a href="#" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt="" /></a>
+       <a href="/" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt="" /></a>
      </div>
    </nav>
     {{{body}}}
