--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>{{title}}</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
-  <body>
-    <nav>
-     <div class="nav-wrapper">
-       <a href="/" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt="" /></a>
-     </div>
-   </nav>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <a href="/" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt="" /></a>
+            </div>
+        </nav>
+    </div>
     {{{body}}}
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-  </body>
+</body>
+
 </html>
