--- a/views/books.hbs
+++ b/views/books.hbs
@@ -12,6 +12,8 @@
                   </div>
                   <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">{{this.title}}<i class="material-icons right">more_vert</i></span>
+                      <br>
+                      <a href="/books/{{this.id}}" class="waves-effect waves-light btn btn-small">More detail</a>
                   </div>
                   <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">{{this.title}}<i class="material-icons right">close</i></span>
