add delete book option

--- a/views/bookdetail.hbs
+++ b/views/bookdetail.hbs
@@ -1,3 +1,6 @@
+<div class="container">
+  <div class="section">
+  <div class="row">
 <div class="col s12 m12">
     <div class="row">
         <div class="col s12 m6 offset-m3">
@@ -24,7 +27,10 @@
     <a href="/books/{{book.id}}/delete/" class="waves-effect waves-light btn">Delete Book</a>
 </div>
 </div>
-<center><a href="/events" class="waves-effect waves-light btn">Back to books</a></center>
+<center><a href="/books" class="waves-effect waves-light btn">Back to books</a></center>
         </div>
     </div>
+</div>
+</div>
+</div>
 </div>
