--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
     <title>{{title}}</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +15,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="/" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt="" /></a>
+                <a href="/" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt=""/></a>
             </div>
         </nav>
     </div>
