--- a/views/books.hbs
+++ b/views/books.hbs
@@ -14,6 +14,8 @@
                       <span class="card-title activator grey-text text-darken-4">{{this.title}}<i class="material-icons right">more_vert</i></span>
                       <br>
                       <a href="/books/{{this.id}}" class="waves-effect waves-light btn btn-small">More detail</a>
+
+                      <a href="/books/{{this.id}}/confirm" type="submit"><i class="fa fa-times small" aria-hidden="true"></i></a>
                   </div>
                   <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">{{this.title}}<i class="material-icons right">close</i></span>
