add edit function to books

--- a/views/books.hbs
+++ b/views/books.hbs
@@ -15,7 +15,8 @@
                       <br>
                       <a href="/books/{{this.id}}" class="waves-effect waves-light btn btn-small">More detail</a>
 
-                      <a href="/books/{{this.id}}/confirm" type="submit"><i class="fa fa-times small" aria-hidden="true"></i></a>
+                      <a href="/books/{{this.id}}/confirm"><i class="fa fa-times small" aria-hidden="true"></i></a>
+                      <a href="/books/{{this.id}}/edit" ><i class="fa fa-pencil small" aria-hidden="true"></i></a>
                   </div>
                   <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">{{this.title}}<i class="material-icons right">close</i></span>
