add author data and view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,4 +2,5 @@
   <main>
     <h1 class="introtext">{{title}}</h1>
     <a href="/books">View Books</a>
+      <a href="/authors">View Authors</a>
   </main>
