--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,6 +16,10 @@
         <nav>
             <div class="nav-wrapper">
                 <a href="/" class="brand-logo center">Galvanize Reads <img class="logoimage" src="http://www.oliversacks.com/os/wp-content/uploads/2015/04/DSC_6976-opt.jpg" alt=""/></a>
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="/books">Books</a></li>
+        <li><a href="/authors">Authors</a></li>
+      </ul>
             </div>
         </nav>
     </div>
