fix link to delete page

--- a/views/authordetail.hbs
+++ b/views/authordetail.hbs
@@ -21,7 +21,7 @@
   </div>
   <div class="center-btn">
     <a href="/authors/{{author.id}}/edit/" class=" waves-effect waves-light btn">Edit Author</a>
-    <a href="/authors/{{author.id}}/delete/" class="waves-effect waves-light btn">Delete Author</a>
+    <a href="/authors/{{author.id}}/confirm" class="waves-effect waves-light btn">Delete Author</a>
 </div>
 </div>
 <center><a href="/authors" class="waves-effect waves-light btn">Back to Authors</a></center>
