--- a/views/bookdetail.hbs
+++ b/views/bookdetail.hbs
@@ -24,7 +24,7 @@
   </div>
   <div class="center-btn">
     <a href="/books/{{book.id}}/edit/" class=" waves-effect waves-light btn">Edit Book</a>
-    <a href="/books/{{book.id}}/delete/" class="waves-effect waves-light btn">Delete Book</a>
+    <a href="/books/{{book.id}}/confirm" class="waves-effect waves-light btn">Delete Book</a>
 </div>
 </div>
 <center><a href="/books" class="waves-effect waves-light btn">Back to books</a></center>
