--- a/views/books.hbs
+++ b/views/books.hbs
@@ -1,5 +1,5 @@
 
-<h1 class="center">Books</h1>
+<h1 class="center"></h1>
   <div class="container">
     <a href="/books/add" class="waves-effect waves-light btn btn-small">Add a book</a>
     <div class="section">
