--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,6 +24,15 @@
         </nav>
     </div>
     {{{body}}}
+    <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+          <div class="footer-copyright">
+            <div class="container">
+            <a class="grey-text text-lighten-4 center" href="https://github.com/wthomasdev/galvanize-reads">Github</a>
+            </div>
+          </div>
+        </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 </body>
