--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,34 @@
 
   <main>
-    <h1 class="introtext">{{title}}</h1>
-    <a href="/books">View Books</a>
-      <a href="/authors">View Authors</a>
+    <div class="container">
+      <div class="section">
+    <div class="row">
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image front-page">
+              <a href="/books">
+              <img src="http://milestoneseducation.com/wp-content/uploads/2016/06/Books-bookshelf-person-head-540w.jpg">
+              </a>
+            </div>
+            <div class="card-action">
+              <a href="/books">Books</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <div class="card">
+            <div class="card-image front-page">
+              <a href="/authors"><img src="https://www.drumbeatmarketing.net/wp-content/uploads/2013/10/new-writer.jpg">
+            </div>
+            </a>
+            <div class="card-action">
+              <a href="/authors">Authors</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+      </div>
+          </div>
+
   </main>
