--- a/views/authordetail.hbs
+++ b/views/authordetail.hbs
@@ -25,7 +25,7 @@
       </p>
         {{#each book}}
         <p>
-          {{this.title}}
+          <a href="/books/{{this.id}}">{{this.title}}</a>  
         </p>
         {{/each}}
 
