--- a/views/bookdetail.hbs
+++ b/views/bookdetail.hbs
@@ -27,7 +27,7 @@
       </p>
       {{#each author}}
         <p>
-          {{this.first_name}} {{this.last_name}}
+          <a href="/authors/{{this.id}}">{{this.first_name}} {{this.last_name}}</a>  
         </p>
       {{/each}}
 
