--- a/views/deleteauthor.hbs
+++ b/views/deleteauthor.hbs
@@ -3,8 +3,7 @@
     <div class="row">
        <div class="col s12 m12">
          <div class="card-panel teal">
-           <span class="white-text">Are you sure you want to delete {{author.first_name}} {{author.last_name}}?
-           </span>
+           <span class="white-text">Are you sure you want to delete {{author.first_name}} {{author.last_name}}? Who wrote such classics as {{#each book}} <a href="/books/{{this.id}}">{{this.title}}</a>  <br> {{/each}}           </span>
            <form action="/authors/{{author.id}}/delete/?_method=DELETE" method="POST">
              <button type="submit">Yes</button>
            </form>
