--- a/views/deleteconfirmation.hbs
+++ b/views/deleteconfirmation.hbs
@@ -3,7 +3,7 @@
     <div class="row">
        <div class="col s12 m12">
          <div class="card-panel teal">
-           <span class="white-text">Are you sure you want to delete {{book.title}}?
+           <span class="white-text">Are you sure you want to delete {{book.title}} written by {{#each author}} <a href="/authors/{{this.id}}">{{this.first_name}} {{this.last_name}}</a>  <br> {{/each}}?
            </span>
            <form action="/books/{{book.id}}/delete/?_method=DELETE" method="POST">
              <button type="submit">Yes</button>
