--- a/views/editbook.hbs
+++ b/views/editbook.hbs
@@ -6,15 +6,15 @@
     <br>
     <form action="/books/{{book.id}}/edit/?_method=PUT" method="POST">
         <label for="book_title">Book Title</label>
-        <input id="book_title" name="title" placeholder="{{book.title}}">
+        <input id="book_title" name="title" value="{{book.title}}">
         <label for="book_genre">Book Genre:</label>
-        <input id="book_genre" name="book_genre" placeholder="{{book.book_genre}}">
+        <input id="book_genre" name="book_genre" value="{{book.book_genre}}">
         <br>
         <br>
         <label for="book_description">Book Description:</label>
-        <textarea id="book_description" name="book_description" class="materialize-textarea" placeholder="{{book.book_description}}"></textarea>
+        <textarea id="book_description" name="book_description" class="materialize-textarea">{{book.book_description}}</textarea>
         <label for="book_cover_url">Book Cover Url:</label>
-        <input id="book_cover_url" type="url" name="book_cover_url" placeholder="{{book.book_cover_url}}">
+        <input id="book_cover_url" type="url" name="book_cover_url" value="{{book.book_cover_url}}">
         <button type="submit" class="waves-effect waves-light btn">Submit</button>
         <a href="/books" class="waves-effect waves-light btn">Back</a>
     </form>
