--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -15,6 +15,15 @@
         <textarea id="book_description" name="book_description" class="materialize-textarea"></textarea>
         <label for="book_cover_url">Book Cover Url:</label>
         <input id="book_cover_url" type="url" name="book_cover_url">
+        <div class="input-field">
+            <select id="addauthor" name="author_id">
+                <option value="" disabled selected></option>
+                {{#each author}}
+                    <option value="{{this.id}}">{{this.first_name}} {{this.last_name}}</option>
+                {{/each}}
+            </select>
+            <label for="activity_id">Add an Author</label>
+        </div>
         <button type="submit" class="waves-effect waves-light btn">Submit</button>
     </form>
 </div>
