--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -22,7 +22,7 @@
                     <option value="{{this.id}}">{{this.first_name}} {{this.last_name}}</option>
                 {{/each}}
             </select>
-            <label for="activity_id">Add an Author</label>
+            <label for="addauthor">Add an Author</label>
         </div>
         <button type="submit" class="waves-effect waves-light btn">Submit</button>
     </form>
