--- a/views/editauthor.hbs
+++ b/views/editauthor.hbs
@@ -2,7 +2,7 @@
   <div class="section">
           <div class="row">
             <div class="col s12 m6 offset-m3">
-    <h3>Edit Author:</h3>
+    <h4>Edit Author:</h4>
     <br>
     <form action="/authors/{{author.id}}/edit/?_method=PUT" method="POST">
         <label for="first_name">First Name</label>
@@ -18,6 +18,17 @@
         <button type="submit" class="waves-effect waves-light btn">Submit</button>
         <a href="/authors" class="waves-effect waves-light btn">Back</a>
     </form>
+
+  <h5>{{author.first_name}} {{author.last_name}}'s books:</h5>
+  <div class="input-field">
+      <select>
+          {{#each book}}
+          <option>{{this.title}}
+        </option>
+          {{/each}}
+      </select>
+  </div>
+
 </div>
   </div>
 </div>
