--- a/views/editbook.hbs
+++ b/views/editbook.hbs
@@ -2,7 +2,7 @@
   <div class="section">
           <div class="row">
             <div class="col s12 m6 offset-m3">
-    <h3>Edit book:</h3>
+    <h4>Edit book:</h4>
     <br>
     <form action="/books/{{book.id}}/edit/?_method=PUT" method="POST">
         <label for="book_title">Book Title</label>
@@ -15,9 +15,21 @@
         <textarea id="book_description" name="book_description" class="materialize-textarea">{{book.book_description}}</textarea>
         <label for="book_cover_url">Book Cover Url:</label>
         <input id="book_cover_url" type="url" name="book_cover_url" value="{{book.book_cover_url}}">
+        <div class="input-field">
+            <select id="addauthor" name="author_id">
+                <option value="" disabled selected></option>
+                {{#each author}}
+                    <option value="{{this.id}}">{{this.first_name}} {{this.last_name}}</option>
+                {{/each}}
+            </select>
+            <label for="addauthor">Add an Author</label>
+        </div>
         <button type="submit" class="waves-effect waves-light btn">Submit</button>
         <a href="/books" class="waves-effect waves-light btn">Back</a>
     </form>
+
+
+
 </div>
   </div>
 </div>
