--- a/views/books.hbs
+++ b/views/books.hbs
@@ -21,7 +21,7 @@
                   <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">{{this.title}}<i class="material-icons right">close</i></span>
           <p>
-            {{this.book_genre}}
+            {{this.genre}}
           </p>
           <p>
             {{this.book_description}}
