--- a/views/editbook.hbs
+++ b/views/editbook.hbs
@@ -8,7 +8,7 @@
         <label for="book_title">Book Title</label>
         <input id="book_title" name="title" value="{{book.title}}">
         <label for="book_genre">Book Genre:</label>
-        <input id="book_genre" name="book_genre" value="{{book.book_genre}}">
+        <input id="book_genre" name="book_genre" value="{{book.genre}}">
         <br>
         <br>
         <label for="book_description">Book Description:</label>
