--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -1,7 +1,7 @@
 
-<h1 class="center">Authors</h1>
   <div class="container">
-    <a href="/authors/add" class="waves-effect waves-light btn btn-small">Add a author</a>
+    <br>
+    <a href="/authors/add" class="waves-effect waves-light btn btn-small">Add an author</a>
     <div class="section">
             <div class="row">
           {{#each author}}
