--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,12 @@
 
-  <main>
     <div class="container">
       <div class="section">
     <div class="row">
         <div class="col s12 m6">
-          <div class="card">
+          <div class="card large">
             <div class="card-image front-page">
               <a href="/books">
-              <img src="http://milestoneseducation.com/wp-content/uploads/2016/06/Books-bookshelf-person-head-540w.jpg">
+              <img class="front-card" src="http://milestoneseducation.com/wp-content/uploads/2016/06/Books-bookshelf-person-head-540w.jpg">
               </a>
             </div>
             <div class="card-action">
@@ -16,9 +15,9 @@
           </div>
         </div>
         <div class="col s12 m6">
-          <div class="card">
+          <div class="card large">
             <div class="card-image front-page">
-              <a href="/authors"><img src="https://www.drumbeatmarketing.net/wp-content/uploads/2013/10/new-writer.jpg">
+              <a href="/authors"><img class="front-card" src="https://www.drumbeatmarketing.net/wp-content/uploads/2013/10/new-writer.jpg">
             </div>
             </a>
             <div class="card-action">
@@ -29,6 +28,3 @@
       </div>
     </div>
       </div>
-          </div>
-
-  </main>
