--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <header>
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
@@ -23,13 +24,16 @@
             </div>
         </nav>
     </div>
+    </header>
+  <main>
     {{{body}}}
-    <footer class="page-footer">
+  </main>
+    <footer class="page-footer teal">
           <div class="container">
             <div class="row">
           <div class="footer-copyright">
-            <div class="container">
-            <a class="grey-text text-lighten-4 center" href="https://github.com/wthomasdev/galvanize-reads">Github</a>
+            <div class="container footer-center">
+            <a class="grey-text text-lighten-4 center footer-text" href="https://github.com/wthomasdev/galvanize-reads">Github</a>
             </div>
           </div>
         </footer>
