--- a/views/addbook.hbs
+++ b/views/addbook.hbs
@@ -7,8 +7,14 @@
     <form action="/books/add" method="POST">
         <label for="book_title">Book Title</label>
         <input id="book_title" name="title">
-        <label for="book_genre">Book Genre:</label>
-        <input id="book_genre" name="book_genre">
+        <div class="input-field">
+            <select id="addbook" name="book_genre">
+                {{#each genre}}
+                    <option value="{{this.id}}">{{this.genre}}
+                {{/each}}
+            </select>
+            <label for="addbook">Genre:</label>
+        </div>
         <br>
         <br>
         <label for="book_description">Book Description:</label>
