add count feature to author and book

--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -2,6 +2,7 @@
   <div class="container">
     <br>
     <a href="/authors/add" class="waves-effect waves-light btn btn-small">Add an author</a>
+    <h5>Authors in the database: {{count.count}}</h5>
     <div class="section">
             <div class="row">
           {{#each author}}
