--- a/views/books.hbs
+++ b/views/books.hbs
@@ -3,6 +3,7 @@
     <br>
     <a href="/books/add" class="waves-effect waves-light btn btn-small">Add a book</a>
     <div class="section">
+    <h5>Books in the database: {{count.count}}</h5>
             <div class="row">
           {{#each book}}
           <div class="col s12 m4">
