--- a/views/authors.hbs
+++ b/views/authors.hbs
@@ -1,38 +1,36 @@
-
-  <div class="container">
+<div class="container">
     <br>
     <a href="/authors/add" class="waves-effect waves-light btn btn-small">Add an author</a>
     <h5>Authors in the database: {{count.count}}</h5>
     <div class="section">
-            <div class="row">
-          {{#each author}}
-          <div class="col s12 m4">
-              <div class="card medium">
-                  <div class="card-image waves-effect waves-block waves-light">
-                      <img class="activator imageborder" src="{{this.author_portrait_url}}">
-                  </div>
-                  <div class="card-content">
-                      <span class="card-title activator grey-text text-darken-4">{{this.first_name}} {{this.last_name}}<i class="material-icons right">more_vert</i></span>
-                      <br>
-                      <a href="/authors/{{this.id}}" class="waves-effect waves-light btn btn-small">More detail</a>
+        <div class="row">
+            {{#each author}}
+                <div class="col s12 m4">
+                    <div class="card medium">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator imageborder" src="{{this.author_portrait_url}}">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">{{this.first_name}} {{this.last_name}}<i class="material-icons right">more_vert</i></span>
+                            <br>
+                            <a href="/authors/{{this.id}}" class="waves-effect waves-light btn btn-small">More detail</a>
 
-                      <a href="/authors/{{this.id}}/confirm"><i class="fa fa-times small" aria-hidden="true"></i></a>
-                      <a href="/authors/{{this.id}}/edit" ><i class="fa fa-pencil small" aria-hidden="true"></i></a>
-                  </div>
-                  <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">{{this.first_name}}{{this.last_name}}<i class="material-icons right">close</i></span>
-          <p>
-            {{this.biography}}
-          </p>
-          <br>
-          Books:
-          {{#each this.books}}
-          <a href="/books/{{book_id}}">{{title}}</a>
-          {{/each}}
-      </div>
-  </div>
-</div>
-{{/each}}
+                            <a href="/authors/{{this.id}}/confirm"><i class="fa fa-times small" aria-hidden="true"></i></a>
+                            <a href="/authors/{{this.id}}/edit"><i class="fa fa-pencil small" aria-hidden="true"></i></a>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">{{this.first_name}}{{this.last_name}}<i class="material-icons right">close</i></span>
+                            <p>
+                                {{this.biography}}
+                            </p>
+                            <br> Books:
+                            {{#each this.books}}
+                                <a href="/books/{{book_id}}">{{title}}</a>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+            {{/each}}
+        </div>
     </div>
-  </div>
 </div>
